chore: added full flow deploy

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,10 @@
 ETHERSCAN_API_KEY=
 WALLET_PRIV_KEY=
 RPC_URL=
+
+
+TREASURY_ADDRESS=
+FACTORY_OWNER=
+TOKEN_TO_PAY_FEE=
+VAULT_STAKED_TOKEN=
+VAULT_SIZE=
